# Generated by Django 6.0.6 on 2026-07-08 19:13

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('catalog', '0001_initial'),
        ('customers', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='SecuenciaFactura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('year', models.IntegerField(unique=True, verbose_name='Año')),
                ('correlativo', models.IntegerField(default=0, verbose_name='Correlativo')),
            ],
            options={
                'verbose_name': 'Secuencia de factura',
                'verbose_name_plural': 'Secuencias de factura',
            },
        ),
        migrations.CreateModel(
            name='Factura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('deleted_at', models.DateTimeField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('numero', models.CharField(editable=False, max_length=20, unique=True, verbose_name='Número')),
                ('fecha_emision', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de emisión')),
                ('subtotal', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Subtotal')),
                ('iva_total', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='IVA Total')),
                ('total', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Total')),
                ('metodo_pago', models.CharField(choices=[('Efectivo', 'Efectivo'), ('Tarjeta Débito', 'Tarjeta Débito'), ('Tarjeta Crédito', 'Tarjeta Crédito'), ('Transferencia', 'Transferencia'), ('Crédito', 'Crédito')], default='Efectivo', max_length=50, verbose_name='Método de pago')),
                ('observaciones', models.TextField(blank=True, verbose_name='Observaciones')),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='customers.cliente', verbose_name='Cliente')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL, verbose_name='Vendedor')),
            ],
            options={
                'verbose_name': 'Factura',
                'verbose_name_plural': 'Facturas',
                'ordering': ['-fecha_emision'],
            },
        ),
        migrations.CreateModel(
            name='DetalleFactura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('deleted_at', models.DateTimeField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('cantidad', models.IntegerField(verbose_name='Cantidad')),
                ('precio_unitario', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Precio unitario')),
                ('descuento_pct', models.DecimalField(decimal_places=2, default=0, max_digits=5, verbose_name='Descuento %')),
                ('subtotal', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Subtotal')),
                ('iva_porcentaje', models.DecimalField(decimal_places=2, max_digits=4, verbose_name='IVA %')),
                ('iva_valor', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Valor IVA')),
                ('total', models.DecimalField(decimal_places=2, max_digits=12, verbose_name='Total')),
                ('producto', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='catalog.producto', verbose_name='Producto')),
                ('factura', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='detalles', to='invoicing.factura', verbose_name='Factura')),
            ],
            options={
                'verbose_name': 'Detalle de factura',
                'verbose_name_plural': 'Detalles de factura',
            },
        ),
    ]
